# indicate

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic.cpp
src/: CMakeLists.txt  indicate.cppm  indicate.human_format.cppm  indicate.progress_bar.cppm  indicate.spinner.cppm  indicate.style.cppm  indicate.util.cppm  progress_bar.cppm  spinner.cppm
